force-app/main/default/objects/OrderLineItem__c/OrderLineItem__c.object-meta.xml
<CustomObject>
    <label>Order Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>