force-app/main/default/objects/OrderLineItem__c/fields/IsAddition__c.field-meta.xml
<CustomField>
    <fullName>IsAddition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Addition</label>
    <type>Checkbox</type>
</CustomField>