force-app/main/default/objects/OrderLineItem__c/fields/LineNum__c.field-meta.xml
<CustomField>
    <fullName>LineNum__c</fullName>
    <label>Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>