force-app/main/default/objects/OrderLineItem__c/fields/OppCloseDate__c.field-meta.xml
<CustomField>
    <fullName>OppCloseDate__c</fullName>
    <label>Opp Close Date</label>
    <type>Date</type>
</CustomField>