force-app/main/default/objects/OrderLineItem__c/fields/OppCountry__c.field-meta.xml
<CustomField>
    <fullName>OppCountry__c</fullName>
    <label>Opp Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>