force-app/main/default/objects/OrderLineItem__c/fields/OppName__c.field-meta.xml
<CustomField>
    <fullName>OppName__c</fullName>
    <label>Opp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>