force-app/main/default/objects/OrderLineItem__c/fields/OppOwnerName__c.field-meta.xml
<CustomField>
    <fullName>OppOwnerName__c</fullName>
    <label>Opp Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>