force-app/main/default/objects/OrderLineItem__c/fields/OppRealizationEndDate__c.field-meta.xml
<CustomField>
    <fullName>OppRealizationEndDate__c</fullName>
    <label>Opp Realization End Date</label>
    <type>Date</type>
</CustomField>