force-app/main/default/objects/OrderLineItem__c/fields/OppRealizationStartDate__c.field-meta.xml
<CustomField>
    <fullName>OppRealizationStartDate__c</fullName>
    <label>Opp Realization Start Date</label>
    <type>Date</type>
</CustomField>