force-app/main/default/objects/OrderLineItem__c/fields/OppResponsibleTechnician__c.field-meta.xml
<CustomField>
    <fullName>OppResponsibleTechnician__c</fullName>
    <label>Opp Constructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>