force-app/main/default/objects/OrderLineItem__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>OrderLineItems</relationshipLabel>
    <relationshipName>OrderLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>