force-app/main/default/objects/OrderLineItem__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>ProductFamily</label>
    <length>255</length>
    <type>Text</type>
</CustomField>