force-app/main/default/objects/OrderLineItem__c/fields/ProductSAPId__c.field-meta.xml
<CustomField>
    <fullName>ProductSAPId__c</fullName>
    <formula>ProductId__r.SAPId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product SAP ID</label>
    <type>Text</type>
</CustomField>