force-app/main/default/objects/OrderLineItem__c/fields/QliTCAccommodationCost__c.field-meta.xml
<CustomField>
    <fullName>QliTCAccommodationCost__c</fullName>
    <label>QLI TC Accommodation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>