force-app/main/default/objects/OrderLineItem__c/fields/QliTCAssemblyCost__c.field-meta.xml
<CustomField>
    <fullName>QliTCAssemblyCost__c</fullName>
    <label>QLI TC Assembly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>