force-app/main/default/objects/OrderLineItem__c/fields/QliTcMaterialShipping__c.field-meta.xml
<CustomField>
    <fullName>QliTcMaterialShipping__c</fullName>
    <label>QLI TC Material Shipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>