force-app/main/default/objects/OrderLineItem__c/fields/QliTCMaterialShippingCost__c.field-meta.xml
<CustomField>
    <fullName>QliTCMaterialShippingCost__c</fullName>
    <label>QLI TC Material Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>