force-app/main/default/objects/OrderLineItem__c/fields/QliTCShippingCost__c.field-meta.xml
<CustomField>
    <fullName>QliTCShippingCost__c</fullName>
    <label>QLI TC Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>