force-app/main/default/objects/OrderLineItem__c/fields/QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>OrderLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>